# ChayEngine

apps/viewer/: CMakeLists.txt  main.cpp
engine/: CMakeLists.txt
engine/core/: app_settings.hpp  application.cpp  application.hpp  engine.cpp  engine.hpp  entity.hpp  mathlib.hpp  renderer.hpp  window.cpp  window.hpp
engine/entities/: camera.hpp  model_dynamic.hpp  model_static.hpp
engine/loaders/: obj_loader.cpp  obj_loader.hpp
engine/renderers/: forward_renderer.cpp  forward_renderer.hpp
engine/shaders/: common.h  shader.comp
